# darwin

./: LICENSE  README.md
RTL/GACT/: Ascii2Nt.v  Ascii2Param.v  BRAM.v  BTLogic.v  DP_BRAM.v  FIFOWithCount.v  GACTTop.v  Nt2Param.v  README.md  SmithWatermanArray.v  SmithWatermanPE.v  get_alignments.py  mux_1OfN.v  run_test.sh  tb_GACTTop.v
RTL/GACT/test_data/: query.1.hex  query.10.hex  query.2.hex  query.3.hex  query.4.hex  query.5.hex  query.6.hex  query.7.hex  query.8.hex  query.9.hex  query_320.txt  ref.1.hex  ref.10.hex  ref.2.hex  ref.3.hex  ref.4.hex  ref.5.hex  ref.6.hex  ref.7.hex  ref.8.hex  ref.9.hex  ref.hex  ref_320.txt  test_align.txt
software/: .gitignore  CMakeLists.txt  DRAM.cpp  DRAM.h  Darwin.bond  Darwin.sln  Darwin.vcxproj  Darwin.vcxproj.filters  Index.cpp  Index.h  Makefile  Processor.cpp  Processor.h  README.md  ReadMe.txt  align.cpp  align.h  darwin_ref_guided.cpp  extender.cpp  fasta.cpp  fasta.h  filter.cpp  gact.cpp  gact.h  graph.h  maf_printer.cpp  main.cpp  ntcoding.cpp  ntcoding.h  params.cfg  printer.cpp  read_overlaps.cpp  seed_pos_table.cpp  seed_pos_table.h  seeder.cpp  sender.cpp
software/data/: sample_ref.fa
